--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,7 +22,7 @@ jobs:
          id: verify-changed-files
          with:
            files: |
-             README.md
+             README.MD
 
        - name: Create Pull Request
          if: steps.verify-changed-files.outputs.files_changed == 'true'
