--- a/action.yml
+++ b/action.yml
@@ -29,5 +29,5 @@ runs:
   image: docker://artarts36/merge-request-linter
   args:
     - lint
-    - ${{ inputs.debug && '--debug' || '' }}
-    - ${{ inputs.metrics && '--metrics' || '' }}
+    - ${{ inputs.debug == true && '--debug' || '' }}
+    - ${{ inputs.metrics == true && '--metrics' || '' }}
