--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,4 @@ runs:
   using: docker
   image: docker://artarts36/merge-request-linter
   args:
-    - lint
-    - ${{ inputs.debug == true && '--debug' || '' }}
-    - ${{ inputs.metrics == true && '--metrics' || '' }}
+    - "lint ${{ inputs.debug == true && '--debug' || '' }} ${{ inputs.metrics == true && '--metrics' || '' }}"
